k8s/traefik/basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: test-auth
spec:
    basicAuth:
        secret: authsecret
        removeHeader: true
