k8s/traefik/traefik-dashboard-service.yaml
kind: Service
apiVersion: v1
metadata:
    name: ${TRAEFIK_DASHBOARD_SVC_NAME}
    namespace: ${TRAEFIK_DASHBOARD_NAMESPACE}
spec:
    ports:
        - port: 9000
          targetPort: 9000
          protocol: TCP
    selector:
        app.kubernetes.io/name: traefik
