k8s/traefik/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ${TRAEFIK_DASHBOARD_NAME}
    namespace: ${TRAEFIK_DASHBOARD_NAMESPACE}
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-cloudflare
        traefik.ingress.kubernetes.io/router.middlewares: ${TRAEFIK_DASHBOARD_NAMESPACE}-dashboard-redirect@kubernetescrd,default-test-auth@kubernetescrd
spec:
    rules:
        - host: ${TRAEFIK_DASHBOARD_HOSTNAME}
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: ${TRAEFIK_DASHBOARD_SVC_NAME}
                            port:
                                number: 9000
    tls:
        - hosts:
              - ${TRAEFIK_DASHBOARD_HOSTNAME}
          secretName: ${TRAEFIK_DASHBOARD_NAME}-app-tls
